feat: add create shortener API
