# internal/shortener/model/create_shortener_dto.go
@@ -1,0 +1,9 @@
+package model
+
+type CreateShortenerReq struct {
+	RealURL string `json:"real_url"`
+}
+
+type CreateShortenerResp struct {
+	Slug string `json:"slug"`
+}
